@@ -1,9 +1,13 @@
 package com.campus.api;
 
+import org.springframework.http.HttpStatus;
 import org.springframework.web.bind.annotation.*;
+import org.springframework.web.server.ResponseStatusException;
+
 import java.time.Instant;
+import java.time.LocalDateTime;
 import java.util.List;
-import java.util.Optional;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/posts")
@@ -21,172 +25,259 @@ public class PostController {
         this.userRepo = userRepo;
     }
 
-    // TODO: 나중에 JWT 붙이면 여기서 유저 ID 뽑아서 쓰면 됨
+    // 아직 인증 안 붙였으니까 임시로 userId = 1 고정
     private Long mockUserId() {
         return 1L;
     }
 
-    // ========= 1) 게시글 생성 =========
-    @PostMapping
-    public Post create(@RequestBody Post req) {
-        req.setUserId(mockUserId());
-        req.setUpdatedAt(Instant.now());
-        return postRepo.save(req);
-    }
-
-    // ========= 2) 게시글 목록 (단순 버전, 나중에 page / size 추가 가능) =========
+    // ===== 1) 게시글 목록 조회: GET /posts =====
     @GetMapping
-    public List<Post> list() {
-        // 최신 순으로 보고 싶으면 PostRepository 에 정렬 쿼리 추가해도 됨
-        return postRepo.findAll();
+    public List<ListResponse> list() {
+        return postRepo.findAll()
+                .stream()
+                .map(ListResponse::from)
+                .collect(Collectors.toList());
     }
 
-    // ========= 3) 게시글 단순 조회 (엔티티 그대로) =========
-    @GetMapping("/{id}/raw")
-    public Post getRaw(@PathVariable Long id) {
-        return postRepo.findById(id).orElseThrow();
-    }
-
-    // ========= 4) 게시글 상세 조회 + 댓글 목록 =========
+    // ===== 2) 게시글 상세 조회: GET /posts/{id} =====
     @GetMapping("/{id}")
-    public PostDetailResponse detail(@PathVariable Long id) {
+    public DetailResponse get(@PathVariable Long id) {
         Post post = postRepo.findById(id)
-                .orElseThrow(() -> new RuntimeException("POST_NOT_FOUND"));
+                .orElseThrow(() -> new ResponseStatusException(
+                        HttpStatus.NOT_FOUND, "Post not found"));
 
-        List<Comment> comments = commentRepo.findByPostIdOrderByCreatedAtAsc(id);
+        User author = userRepo.findById(post.getUserId())
+                .orElse(null);
 
-        // 작성자
-        SimpleUser author = userRepo.findById(post.getUserId())
-                .map(SimpleUser::new)
-                .orElseGet(() -> new SimpleUser(null, "unknown", "unknown"));
+        SimpleUser authorDto = author != null
+                ? SimpleUser.from(author)
+                : null;
 
-        // 댓글 DTO 변환
+        List<Comment> comments = commentRepo.findByPostOrderByCreatedAtAsc(post);
         List<CommentDto> commentDtos = comments.stream()
-                .map(c -> {
-                    SimpleUser commentAuthor = userRepo.findById(c.getUserId())
-                            .map(SimpleUser::new)
-                            .orElseGet(() -> new SimpleUser(null, "unknown", "unknown"));
-                    return new CommentDto(c, commentAuthor);
-                })
-                .toList();
+                .map(CommentDto::from)
+                .collect(Collectors.toList());
 
-        return new PostDetailResponse(post, author, commentDtos);
+        return new DetailResponse(
+                post.getId(),
+                post.getTitle(),
+                post.getContent(),
+                post.getImageUrl(),
+                post.getCreatedAt(),
+                post.getUpdatedAt(),
+                authorDto,
+                commentDtos
+        );
     }
 
-    // ========= 5) 게시글 수정 =========
-    @PatchMapping("/{id}")
-    public Post update(@PathVariable Long id, @RequestBody Post req) {
-        Post p = postRepo.findById(id).orElseThrow();
+    // ===== 3) 게시글 작성: POST /posts =====
+    @PostMapping
+    public DetailResponse create(@RequestBody CreatePostRequest req) {
+        Long userId = mockUserId();
 
-        if (!mockUserId().equals(p.getUserId())) {
-            throw new RuntimeException("FORBIDDEN");
+        if (req.title == null || req.title.isBlank()) {
+            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "title is required");
+        }
+        if (req.content == null || req.content.isBlank()) {
+            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "content is required");
         }
 
-        // 수정 가능한 필드만 교체
-        if (req.getTitle() != null) p.setTitle(req.getTitle());
-        if (req.getContent() != null) p.setContent(req.getContent());
-        if (req.getPrice() != null) p.setPrice(req.getPrice());
-        if (req.getSize() != null) p.setSize(req.getSize());
-        if (req.getImageUrl() != null) p.setImageUrl(req.getImageUrl());
+        Post post = new Post(
+                userId,
+                req.title,
+                req.content,
+                req.imageUrl
+        );
+        Post saved = postRepo.save(post);
 
-        p.setUpdatedAt(Instant.now());
-        return postRepo.save(p);
+        User author = userRepo.findById(userId).orElse(null);
+        SimpleUser authorDto = author != null ? SimpleUser.from(author) : null;
+
+        return new DetailResponse(
+                saved.getId(),
+                saved.getTitle(),
+                saved.getContent(),
+                saved.getImageUrl(),
+                saved.getCreatedAt(),
+                saved.getUpdatedAt(),
+                authorDto,
+                List.of()
+        );
     }
 
-    // ========= 6) 게시글 삭제 =========
+    // ===== 4) 게시글 수정: PUT /posts/{id} =====
+    @PutMapping("/{id}")
+    public DetailResponse update(@PathVariable Long id,
+                                 @RequestBody UpdatePostRequest req) {
+        Long userId = mockUserId();
+
+        Post post = postRepo.findById(id)
+                .orElseThrow(() -> new ResponseStatusException(
+                        HttpStatus.NOT_FOUND, "Post not found"));
+
+        // 작성자만 수정 가능
+        if (!post.getUserId().equals(userId)) {
+            throw new ResponseStatusException(HttpStatus.FORBIDDEN, "You can edit only your own post");
+        }
+
+        if (req.title != null && !req.title.isBlank()) {
+            post.setTitle(req.title);
+        }
+        if (req.content != null && !req.content.isBlank()) {
+            post.setContent(req.content);
+        }
+        if (req.imageUrl != null) {
+            post.setImageUrl(req.imageUrl);
+        }
+
+        Post saved = postRepo.save(post);
+        User author = userRepo.findById(saved.getUserId()).orElse(null);
+        SimpleUser authorDto = author != null ? SimpleUser.from(author) : null;
+        List<Comment> comments = commentRepo.findByPostOrderByCreatedAtAsc(saved);
+        List<CommentDto> commentDtos = comments.stream()
+                .map(CommentDto::from)
+                .collect(Collectors.toList());
+
+        return new DetailResponse(
+                saved.getId(),
+                saved.getTitle(),
+                saved.getContent(),
+                saved.getImageUrl(),
+                saved.getCreatedAt(),
+                saved.getUpdatedAt(),
+                authorDto,
+                commentDtos
+        );
+    }
+
+    // ===== 5) 게시글 삭제: DELETE /posts/{id} =====
     @DeleteMapping("/{id}")
+    @ResponseStatus(HttpStatus.NO_CONTENT)
     public void delete(@PathVariable Long id) {
-        Post p = postRepo.findById(id).orElseThrow();
+        Long userId = mockUserId();
 
-        if (!mockUserId().equals(p.getUserId())) {
-            throw new RuntimeException("FORBIDDEN");
+        Post post = postRepo.findById(id)
+                .orElseThrow(() -> new ResponseStatusException(
+                        HttpStatus.NOT_FOUND, "Post not found"));
+
+        // 작성자만 삭제 가능
+        if (!post.getUserId().equals(userId)) {
+            throw new ResponseStatusException(HttpStatus.FORBIDDEN, "You can delete only your own post");
         }
 
-        postRepo.deleteById(id);
+        // 먼저 댓글 모두 삭제
+        commentRepo.deleteAllByPost(post);
+        // 그 다음 게시글 삭제
+        postRepo.delete(post);
     }
 
-    // ========= 7) 댓글 생성 =========
-    @PostMapping("/{postId}/comments")
-    public Comment addComment(@PathVariable Long postId,
-                              @RequestBody CommentCreateRequest req) {
+    // ===== 6) 댓글 삭제: DELETE /posts/comments/{commentId} =====
+    @DeleteMapping("/comments/{commentId}")
+    @ResponseStatus(HttpStatus.NO_CONTENT)
+    public void deleteComment(@PathVariable Long commentId) {
+        Long userId = mockUserId();
 
-        Post post = postRepo.findById(postId)
-                .orElseThrow(() -> new RuntimeException("POST_NOT_FOUND"));
+        Comment comment = commentRepo.findById(commentId)
+                .orElseThrow(() -> new ResponseStatusException(
+                        HttpStatus.NOT_FOUND, "Comment not found"));
 
-        Comment comment = new Comment();
-        comment.setPostId(post.getId());
-        comment.setUserId(mockUserId());  // 나중에 JWT 붙이면 여기서 가져오기
-        comment.setContent(req.content);
-        comment.setCreatedAt(Instant.now());
-
-        return commentRepo.save(comment);
-    }
-
-    // ================== 내부 DTO들 ==================
-
-    /** 댓글 생성용 요청 바디 */
-    public static class CommentCreateRequest {
-        public String content;
-    }
-
-    /** 유저 정보 축약 형태 (id, email, name 정도만) */
-    public static class SimpleUser {
-        public Long id;
-        public String email;
-        public String name;
-
-        public SimpleUser(User u) {
-            this.id = u.getId();
-            this.email = u.getEmail();
-            this.name = u.getName();
+        if (!comment.getAuthor().getId().equals(userId)) {
+            throw new ResponseStatusException(HttpStatus.FORBIDDEN, "You can delete only your own comment");
         }
 
-        public SimpleUser(Long id, String email, String name) {
-            this.id = id;
-            this.email = email;
-            this.name = name;
-        }
+        commentRepo.delete(comment);
     }
 
-    /** 댓글 응답 DTO */
-    public static class CommentDto {
-        public Long id;
-        public String content;
-        public Instant createdAt;
-        public SimpleUser author;
+    // ====== DTO들 ======
 
-        public CommentDto(Comment c, SimpleUser author) {
-            this.id = c.getId();
-            this.content = c.getContent();
-            this.createdAt = c.getCreatedAt();
-            this.author = author;
-        }
-    }
-
-    /** 게시글 + 작성자 + 댓글까지 한 번에 내려줄 DTO */
-    public static class PostDetailResponse {
+    public static class ListResponse {
         public Long id;
         public String title;
         public String content;
-        public Integer price;
-        public String size;
         public String imageUrl;
         public Instant createdAt;
+
+        public static ListResponse from(Post p) {
+            ListResponse r = new ListResponse();
+            r.id = p.getId();
+            r.title = p.getTitle();
+            r.content = p.getContent();
+            r.imageUrl = p.getImageUrl();
+            r.createdAt = p.getCreatedAt();
+            return r;
+        }
+    }
+
+    public static class DetailResponse {
+        public Long id;
+        public String title;
+        public String content;
+        public String imageUrl;
+        public Instant createdAt;
+        public Instant updatedAt;
         public SimpleUser author;
         public List<CommentDto> comments;
 
-        public PostDetailResponse(Post post,
-                                  SimpleUser author,
-                                  List<CommentDto> comments) {
-            this.id = post.getId();
-            this.title = post.getTitle();
-            this.content = post.getContent();
-            this.price = post.getPrice();
-            this.size = post.getSize();
-            this.imageUrl = post.getImageUrl();
-            this.createdAt = post.getCreatedAt();
+        public DetailResponse(Long id,
+                              String title,
+                              String content,
+                              String imageUrl,
+                              Instant createdAt,
+                              Instant updatedAt,
+                              SimpleUser author,
+                              List<CommentDto> comments) {
+            this.id = id;
+            this.title = title;
+            this.content = content;
+            this.imageUrl = imageUrl;
+            this.createdAt = createdAt;
+            this.updatedAt = updatedAt;
             this.author = author;
             this.comments = comments;
         }
+    }
+
+    public static class SimpleUser {
+        public Long id;
+        public String nickname;
+        public String profileImageUrl;
+
+        public static SimpleUser from(User u) {
+            SimpleUser r = new SimpleUser();
+            r.id = u.getId();
+            r.nickname = u.getNickname();
+            r.profileImageUrl = u.getProfileImageUrl();
+            return r;
+        }
+    }
+
+    public static class CommentDto {
+        public Long id;
+        public Long authorId;
+        public String authorNickname;
+        public String content;
+        public LocalDateTime createdAt;
+
+        public static CommentDto from(Comment c) {
+            CommentDto r = new CommentDto();
+            r.id = c.getId();
+            r.authorId = c.getAuthor().getId();
+            r.authorNickname = c.getAuthor().getNickname();
+            r.content = c.getContent();
+            r.createdAt = c.getCreatedAt();
+            return r;
+        }
+    }
+
+    public static class CreatePostRequest {
+        public String title;
+        public String content;
+        public String imageUrl;
+    }
+
+    public static class UpdatePostRequest {
+        public String title;
+        public String content;
+        public String imageUrl;
     }
 }
